jobster/base/rest-api/rest-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restapi-deployment
  namespace: jobster
  labels:
    app: restapi
    type: backend

spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: restapi
        type: backend
    spec:
      containers:
      - name: jobster-restapi
        image: ghcr.io/jobst3r/rest-backend:0.8.6
        resources:
          limits:
            memory: "2048Mi"
            cpu: "2"
          requests:
            memory: "1024Mi"
            cpu: "1"
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: github-registry-secret
  selector:
    matchLabels:
      app: restapi
      type: backend
