jobster/base/rest-api/rest-api-external-service.yml
apiVersion: v1
kind: Service
metadata:
  name: external-restapi-service
  namespace: jobster
spec:
  type: NodePort
  selector:
    app: restapi
    type: backend
  ports:
  - port: 3333
    targetPort: 3333
    nodePort: 3333
